完成主页基本布局

--- a/packages/mobile-ui/tsconfig.json
+++ b/packages/mobile-ui/tsconfig.json
@@ -17,7 +17,8 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "ESNext",
-    "types": ["node"]
+    "types": ["node"],
+    "allowSyntheticDefaultImports": true
   },
   "exclude": ["", "./dist"],
   "include": ["src"]
