--- a/apps/mobile-frontend/tsconfig.json
+++ b/apps/mobile-frontend/tsconfig.json
@@ -16,8 +16,8 @@
     "incremental": true,
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.svg", "./global.d.ts"],
   "exclude": ["node_modules"]
 }
