--- a/packages/mobile-ui/package.json
+++ b/packages/mobile-ui/package.json
@@ -31,6 +31,7 @@
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
     "concurrently": "^8.0.1",
+    "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rimraf": "^4.4.1",
@@ -40,5 +41,9 @@
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "dependencies": {
+    "ahooks": "^3.7.6",
+    "classnames": "^2.3.2"
   }
 }
