完成推荐的分类导航

--- a/packages/mobile-ui/tsconfig.lib.json
+++ b/packages/mobile-ui/tsconfig.lib.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "esModuleInterop": false,
     "module": "CommonJS",
-    "outDir": "dist/cjs"
+    "outDir": "dist/cjs",
+    "sourceMap": true
   },
   "exclude": ["**/*.spec.tsx", "src/index.css"],
   "include": ["src"]
