--- a/apps/mobile-frontend/package.json
+++ b/apps/mobile-frontend/package.json
@@ -14,6 +14,7 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
+    "ahooks": "^3.7.6",
     "classnames": "^2.3.2",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
