--- a/packages/mobile-ui/package.json
+++ b/packages/mobile-ui/package.json
@@ -1,7 +1,6 @@
 {
   "name": "forest-mobile-ui",
   "version": "0.0.1",
-  "type": "module",
   "description": "",
   "author": "mingshuisheng",
   "license": "MIT",
@@ -13,7 +12,8 @@
     }
   },
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "main": "./dist/cjs/index.js",
   "module": "./dist/es/index.js",
@@ -31,7 +31,6 @@
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
     "concurrently": "^8.0.1",
-    "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rimraf": "^4.4.1",
